--- a/api/package.json
+++ b/api/package.json
@@ -13,12 +13,13 @@
     "apollo-datasource": "^0.7.0",
     "apollo-datasource-rest": "^0.9.2",
     "apollo-server": "^2.14.2",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "nodemon": "^2.0.3",
-    "npm-run-all": "^4.1.5",
-    "cookie-parser": "^1.4.5"
+    "npm-run-all": "^4.1.5"
   }
 }
