--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "apollo-datasource": "^0.7.0",
     "apollo-datasource-rest": "^0.9.2",
     "apollo-server": "^2.14.2",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
