--- a/api/package.json
+++ b/api/package.json
@@ -10,15 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-datasource": "^0.7.0",
-    "apollo-datasource-rest": "^0.9.2",
-    "apollo-server": "^2.14.2",
-    "dotenv": "^8.2.0",
-    "lodash": "^4.17.15",
-    "lodash-id": "^0.14.0",
+    "apollo-datasource": "^0.7.3",
+    "apollo-datasource-rest": "^0.9.7",
+    "apollo-server": "^2.25.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^8.6.0",
+    "lodash": "^4.17.21",
+    "lodash-id": "^0.14.1",
     "lowdb": "^1.0.0",
-    "nodemon": "^2.0.3",
-    "npm-run-all": "^4.1.5",
-    "cookie-parser": "^1.4.5"
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5"
   }
 }
